--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <!-- <link async defer rel="stylesheet" type="text/css" href="assets/css/style.min.css"> -->
 </head>
 <body>
+  <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
         <img src="assets/img/logo.png" alt="Logo do meu projeto" height="30" width="30">
@@ -95,53 +96,69 @@
         </ul>
       </div>
   </nav>
-  <div class="bd-example">
-    <div id="carouselExampleTopo" class="carousel slide row" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleTopo" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleTopo" data-slide-to="1"></li>
-          <li data-target="#carouselExampleTopo" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <section class="row topo" id="topo1">
-              <article class="col-12 d-flex flex-column justify-content-center">
-                <h1 class="com-sombra">Minha Padoca</h1>
-                <p class="com-sombra">A melhor padoca do bairro.</p>
-                <a href="#" title="Ver mais" target="_self" rel="next" class="btn btn-dark mt-3">Veja Mais</a>
-              </article>
-            </section>
-          </div>
-          <div class="carousel-item">
-              <section class="row topo" id="topo2">
+  </header>
+  <!-- Tag main utilizando classe container-fluid, para definir que nosso container (via bootstrap) será de ponta à ponta -->
+  <main class="container-fluid">
+    <div class="bd-example">
+      <div id="carouselTopo" class="carousel slide row" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselTopo" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselTopo" data-slide-to="1"></li>
+            <li data-target="#carouselTopo" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <!-- Tag section com classe row, definindo que será um sub-container (ou 'wrapper') onde nosso conteúdo será organizado em colunas -->
+              <section class="row topo" id="topo1">
+                <!-- Tag article com classe col-12 (de ponta à ponta) e com classes definindo do flex-box:
+                < article { display: flex; justify-content: center; align-items: center; } > -->
                 <article class="col-12 d-flex flex-column justify-content-center">
-                  <h1 class="com-sombra">Nossa Padoca</h1>
-                  <p class="com-sombra">A melhor padoca da cidade.</p>
+                  <h1 class="com-sombra">Minha Padoca</h1>
+                  <p class="com-sombra">A melhor padoca do bairro.</p>
+                  <!-- Aplicando a classe btn, que define - visualmente - os botões - e btn-dark (que define a cor do botão) -->
                   <a href="#" title="Ver mais" target="_self" rel="next" class="btn btn-dark mt-3">Veja Mais</a>
                 </article>
               </section>
             </div>
             <div class="carousel-item">
-                <section class="row topo" id="topo3">
+                <section class="row topo" id="topo2">
                   <article class="col-12 d-flex flex-column justify-content-center">
-                    <h1 class="com-sombra">Sua Padoca</h1>
-                    <p class="com-sombra">A melhor padoca do universo.</p>
+                    <h1 class="com-sombra">Nossa Padoca</h1>
+                    <p class="com-sombra">A melhor padoca da cidade.</p>
                     <a href="#" title="Ver mais" target="_self" rel="next" class="btn btn-dark mt-3">Veja Mais</a>
                   </article>
                 </section>
               </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleTopo" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleTopo" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+              <div class="carousel-item">
+                  <section class="row topo" id="topo3">
+                    <article class="col-12 d-flex flex-column justify-content-center">
+                      <h1 class="com-sombra">Sua Padoca</h1>
+                      <p class="com-sombra">A melhor padoca do universo.</p>
+                      <a href="#" title="Ver mais" target="_self" rel="next" class="btn btn-dark mt-3">Veja Mais</a>
+                    </article>
+                  </section>
+                </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselTopo" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselTopo" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+      </div>
     </div>
-  </div>
 
+    <section class="row" id="sobre">
+      <article class="col-12 my-5 d-flex flex-column justify-content-center align-items-center">
+        <h2>Nossa missão é te engordar</h2>
+        <p>As melhores guloseimas estão aqui</p>
+        <a href="#produtos" title="Ver Produtos" target="_self" rel="next" class="btn btn-dark mt-3">Mostre-me!</a>
+      </article>
+      
+    </section>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
