--- a/index.html
+++ b/index.html
@@ -217,8 +217,193 @@
 						</div>
 					</div>
 				<!-- Modal Pães - final -->
+      </article>
+      
+      <article class="col-12 col-sm-6 col-lg-3 mt-3">
+				<i class="fas fa-bacon my-2 com-sombra"></i>
+				<p class="px-2 px-sm-3 px-md-5 px-lg-4 px-xl-1 com-sombra">Bacon</p>
+				<button type="button" class="btn btn-dark mb-5" data-toggle="modal" data-target="#baconModal">
+				  Ver opções
+				</button>
+
+				<!-- Modal Bacon - início -->
+					<div class="modal fade" id="baconModal" tabindex="-1" role="dialog" aria-labelledby="baconModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="baconModalLabel">Bacons da Casa</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									Os pedidos podem ser realizados a <strong>qualquer dia e a qualquer hora</strong>. Basta entrar em contato com a gente!
+									<table class="table mt-4">
+									<thead>
+										<tr>
+											<th scope="col">#</th>
+											<th scope="col">Tipo</th>
+											<th scope="col">Preço</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th scope="row">#01</th>
+											<td>Defumado</td>
+											<td>R$ 30,50 / kg</td>
+										</tr>
+										<tr>
+											<th scope="row">#02</th>
+											<td>Frito</td>
+											<td>R$ 13,90 / kg</td>
+										</tr>
+										<tr>
+											<th scope="row">#03</th>
+											<td>Tostado</td>
+											<td>R$ 22,50 / kg</td>
+										</tr>
+									</tbody>
+								</table>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-dark" data-dismiss="modal">OK</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				<!-- Modal Bacon - final -->
+			</article>
+			
+			<article class="col-12 col-sm-6 col-lg-3 mt-3">
+				<i class="fas fa-coffee my-2 com-sombra"></i>
+				<p class="px-2 px-sm-3 px-md-5 px-lg-4 px-xl-1 com-sombra">Café</p>
+				<button type="button" class="btn btn-dark mb-5" data-toggle="modal" data-target="#coffeeModal">
+				  Ver opções
+				</button>
+
+				<!-- Modal Coffee - início -->
+					<div class="modal fade" id="coffeeModal" tabindex="-1" role="dialog" aria-labelledby="coffeeModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="coffeeModalLabel">Café no Ponto</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									Os pedidos podem ser realizados a <strong>qualquer dia e a qualquer hora</strong>. Basta entrar em contato com a gente!
+									<table class="table mt-4">
+									<thead>
+										<tr>
+											<th scope="col">#</th>
+											<th scope="col">Tipo</th>
+											<th scope="col">Preço</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th scope="row">#01</th>
+											<td>Puro</td>
+											<td>R$ 1,50</td>
+										</tr>
+										<tr>
+											<th scope="row">#02</th>
+											<td>Pingado</td>
+											<td>R$ 2,50</td>
+										</tr>
+										<tr>
+											<th scope="row">#03</th>
+											<td>Expresso</td>
+											<td>R$ 4,50</td>
+										</tr>
+									</tbody>
+								</table>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-dark" data-dismiss="modal">OK</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				<!-- Modal Coffee - final -->
 			</article>
 
+			<article class="col-12 col-sm-6 col-lg-3 mt-3">
+				<i class="fas fa-cheese my-2 com-sombra"></i>
+				<p class="px-2 px-sm-3 px-md-5 px-lg-4 px-xl-1 com-sombra">Queijos</p>
+				<button type="button" class="btn btn-dark mb-5" data-toggle="modal" data-target="#cheeseModal">
+				  Ver opções
+				</button>
+
+				<!-- Modal Cheese - início -->
+					<div class="modal fade" id="cheeseModal" tabindex="-1" role="dialog" aria-labelledby="cheeseModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="cheeseModalLabel">Queijos Diversos</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									Os pedidos podem ser realizados a <strong>qualquer dia e a qualquer hora</strong>. Basta entrar em contato com a gente!
+									<table class="table mt-4">
+									<thead>
+										<tr>
+											<th scope="col">#</th>
+											<th scope="col">Tipo</th>
+											<th scope="col">Preço</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th scope="row">#01</th>
+											<td>Prato</td>
+											<td>R$ 6,50 /kg</td>
+										</tr>
+										<tr>
+											<th scope="row">#02</th>
+											<td>Mossarela</td>
+											<td>R$ 5,90 /kg</td>
+										</tr>
+										<tr>
+											<th scope="row">#03</th>
+											<td>Gouda</td>
+											<td>R$ 34,50 /kg</td>
+										</tr>
+									</tbody>
+								</table>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-dark" data-dismiss="modal">OK</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				<!-- Modal Cheese - final -->
+			</article>
+		</section>
+
+		<section class="row py-5" id="produtos">
+			<h1 class="col-12 my-5 com-sombra">Nossos Produtos</h1>
+			<article class="paes d-flex flex-column align-items-start justify-content-end col-12 col-sm-6 offset-lg-3 col-lg-3">
+				<h4>Pães</h4>
+				<p><i>Sempre fresquinhos</i></p>
+			</article>
+			<article class="bacon d-flex flex-column align-items-start justify-content-end col-12 col-sm-6 col-lg-3">
+				<h4>Bacon</h4>
+				<p><i>Crocante e saboroso</i></p>
+			</article>
+			<article class="cafe d-flex flex-column align-items-start justify-content-end col-12 col-sm-6 offset-lg-3 col-lg-3">
+				<h4>Café</h4>
+				<p><i>No ponto certo</i></p>
+			</article>
+			<article class="queijos d-flex flex-column align-items-start justify-content-end col-12 col-sm-6 col-lg-3">
+				<h4>Queijos</h4>
+				<p><i>Com ou sem mofo</i></p>
+			</article>
+		</section>
 
 
 
