--- a/index.html
+++ b/index.html
@@ -404,10 +404,56 @@
 				<p><i>Com ou sem mofo</i></p>
 			</article>
 		</section>
+		<section class="row pt-5" id="contato">
+			<article class="col-12 offset-md-1 col-md-5">
+				<h1 class="com-sombra mt-5">Contato</h1>
+				<p class="com-sombra">Entre em contato conosco e agende sua visita</p>
+				<ul>
+					<li><a href="tel:+551112345678" title="Ligar"><i class="fas fa-phone"> </i> +55 11 1234-5678</a></li>
+					<li><a href="tel:+551112345678" title="Mandar Whasapp"><i class="fab fa-whatsapp"> </i> +55 11 98765-4321</a></li>
+					<li><a href="mailto:info@easternbakery.com.br?Subject=Gostaria%20de%20saber%20mais&body=Me%20chamo%20...%20e%20gostaria%20de%20saber%20mais%20sobre%20..." title="Mandar email"><i class="fas fa-envelope"> </i> info@easternbakery.com.br</a></li>
+					<li> <a href="https://goo.gl/maps/p841CKE2R3BA4MfA6" target="_blank" rel="nofollower" title="Acesse nossa localização no Google Maps"><i class="fa fa-map-marker-alt mr-2"> </i>720 Grant Ave, San Francisco, CA 94108, EUA</a> </li>
+				</ul>
+				<h5 class="meia-linha-horizontal mb-3">Siga-nos</h5>
+				<ul class="offset-2 col-8 d-flex justify-content-around align-items-center" id="socialLinks">
+					<li><a href="https://facebook.com/easternbakery" title="Facebook" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://instagram.com/easternbakery" title="Instagram" target="_blank"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="https://twitter.com/easternbakery" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="https://tripadvisor.com/easternbakery" title="Tripadvisor" target="_blank"><i class="fab fa-tripadvisor"></i></a></li>
+				</ul>
+			</article>
+			<article class="col-12 col-md-5">
+				<h1 class="com-sombra mt-5">Envie sua mensagem</h1>
+				<p class="com-sombra">Entre em contato conosco e agende sua visita</p>
+				<form action="" method="post">
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<label for="nome" class="com-sombra"><b>Nome</b></label>
+							<input type="nome" class="form-control" id="nome" name="nome" placeholder="Nome ou Apelido"  required>
+						</div>
+						<div class="form-group col-md-6">
+							<label for="email" class="com-sombra"><b>Email</b></label>
+							<input type="email" class="form-control" id="email" name="email" placeholder="nome@exemplo.com" required>
+						</div>
+						<div class="form-group col-12">
+							<label for="detalhes" class="com-sombra"><b>Detalhes</b></label>
+							<textarea class="form-control" id="detalhes" name="detalhes" rows="4"></textarea>
+						</div>
+					</div>
+				</form>
+				<input type="submit" class="btn btn-dark mb-3" value="Enviar">
+			</article>
+			<article class="col-12 mt-4 mb-0">
+				<iframe title="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12611.364433572662!2d-122.4061062!3d37.7937633!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcbc5a120b4d390ad!2sEastern+Bakery!5e0!3m2!1spt-BR!2sbr!4v1566105872251!5m2!1spt-BR!2sbr" class="mapa" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</article>
+		</section>
+	</main>
 
-
-
-  </main>
+	<footer class="bg-dark container-fluid">
+		<section class="row">
+			<span id="copy" class="col-12">Eastern Bakery <sup>&copy;</sup> | 1924</span>
+		</section>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
